<resources>
    <string name="app_name">Math Trainer</string>
    <string name="action_options">Options</string>
    <string name="addition">Addition \n + </string>
    <string name="subtraction">Subtraction \n - </string>
    <string name="multiplication">Multiplication \n * </string>
    <string name="division">Division \n / </string>
    <string name="square_power">Square Power\n <html>X<sup><small>2</small></sup></html></string>
    <string name="square_root">Square Root\n \u221A</string>
    <string name="take_a_test">Take a test \n + - * / </string>
    <string name="take_a_test_add_sub">Take a test \n + - </string>
    <string name="take_a_test_mul_div">Take a test \n * / </string>
    <string name="take_a_test_square_power_root">Take a test \n <html>X<sup><small>2</small></sup></html> \u221A </string>
    <string name="additionAction">add</string>
    <string name="subtractionAction">subtract</string>
    <string name="multiplyAction">multiply</string>
    <string name="divideAction">divide</string>
    <string name="title_activity_operation_handler">Math Trainer</string>
    <string name="toolbar_title_test">Exercise</string>
    <string name="difficulty_easy">Easy</string>
    <string name="difficulty_normal">Normal</string>
    <string name="difficulty_hard">Hard</string>
    <string name="difficulty_option">Difficulty</string>
    <string name="operand_type_option">Operand type</string>
    <string name="operand_type_natural">Natural</string>
    <string name="operand_type_integer">Integer</string>
    <string name="notification_text">Math Trainer notification</string>

    <!-- Add mob ids -->
    <string name="main_activity_banner_id">ca-app-pub-5653420823590846/2091332617</string>
    <string name="options_activity_banner_id">ca-app-pub-5653420823590846/8188238610</string>
    <string name="result_activity_banner_id">ca-app-pub-5653420823590846/9246169415</string>
</resources>
