<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_vertical|center_horizontal"
    android:background="@drawable/math_paper">

    <Button
        android:text="@string/addition"
        android:id="@+id/buttonAddition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:textSize="36sp"/>

    <Button
        android:text="@string/subtraction"
        android:id="@+id/buttonSubtraction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:textSize="36sp"/>

    <Button
        android:text="@string/multiplication"
        android:id="@+id/buttonMultiplication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:textSize="36sp"/>

    <Button
        android:text="@string/division"
        android:id="@+id/buttonDivision"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:textSize="36sp"/>

</LinearLayout>