<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/optionsToolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="@color/colorToolbarBackground"
        app:titleTextAppearance="@style/toolbarTextStyle"/>

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton android:id="@+id/radio_easy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/difficulty_easy"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton android:id="@+id/radio_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/difficulty_normal"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton android:id="@+id/radio_hard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/difficulty_hard"
            android:onClick="onRadioButtonClicked"/>

    </RadioGroup>

</LinearLayout>